2010-06-29  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Deal with postEvent in case of graphics based DRT
        https://bugs.webkit.org/show_bug.cgi?id=41174

        QGraphicsScene does not have a postEvent method, so make scene
        send the event, in case of graphics based DRT, and delete it after that.

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::scheduleAsynchronousClick):
        (EventSender::replaySavedEvents):
        (EventSender::postEvent):
        * DumpRenderTree/qt/EventSenderQt.h:

2010-06-29  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Make switchFocus() method works with QGraphicsWebView in Qt DRT
        https://bugs.webkit.org/show_bug.cgi?id=41172

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::switchFocus):

2010-06-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] Make DRT more coherent with other ports to allow reusing more tests
        https://bugs.webkit.org/show_bug.cgi?id=40009

        Make sure "AXRole: ", "AXTitle: " and "AXDescription: " prefixes
        are used when returning those values, for coherency with other ports.

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::role):
        (AccessibilityUIElement::title):
        (AccessibilityUIElement::description):

2010-06-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r62106.
        http://trac.webkit.org/changeset/62106
        https://bugs.webkit.org/show_bug.cgi?id=41346

        "Broke editing tests" (Requested by xan_ on #webkit).

        * Scripts/old-run-webkit-tests:

2010-06-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Xan Lopez.

        Ensure DRT loads GAIL (Gtk+ module), for a11y tests
        https://bugs.webkit.org/show_bug.cgi?id=38648
