@@ -1,5 +1,16 @@
 2010-06-29  Diego Gonzalez  <diegohcg@webkit.org>
 
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Resize scene when Qt DRT WebPage receives a geometry change request
+        https://bugs.webkit.org/show_bug.cgi?id=41173
+
+        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
+        (WebCore::WebPage::setViewGeometry):
+        * DumpRenderTree/qt/DumpRenderTreeQt.h:
+
+2010-06-29  Diego Gonzalez  <diegohcg@webkit.org>
+
         Reviewed by Simon Hausmann.
 
         [Qt] Deal with postEvent in case of graphics based DRT
